--- a/index.html
+++ b/index.html
@@ -18,5 +18,18 @@
                 <a  href="contact.html">Contact</a>
             </b>
     </nav>
+    <header>
+        <h2>
+            New Media and Web Design
+        </h2>
+        <br>Trillium Media Design offers a comprehensive range of services to take your comapany's Web presence to the next level.
+        <br><h2>
+            Meeting Your Business Needs
+        </h2>
+        <br>Our expert designers will listen to you as they create a website that helps to promote and grow your business.
+    </header>
+    <br><footer>
+        <small><i>Copyright &copy; 2018 Your Name Here</i></small>
+        </footer>
 </body>
 </html>
